--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
+    "hooper": "^0.3.4",
     "nuxt": "^2.15.3",
     "vee-validate": "^3.4.10",
     "vuelidate": "^0.7.6"
